[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meok-livestock-welfare-transport-mcp"
version = "1.0.0"
description = "UK + EU animal welfare in transport compliance for livestock hauliers. EU REG 1/2005 long journey logs, Type 1 vs Type 2 transporter authorisation, driver Certificate of Competence, species-specific vehicle approval + loading density, rest/water/feed cadence, APHA roadside inspection pack with Brexit divergence. By MEOK AI Labs."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Nicholas Templeman", email = "nicholas@meok.ai" }]
keywords = ["mcp", "livestock", "animal-welfare", "transport", "apha", "defra", "eu-1-2005", "haulage", "uk-compliance", "meok"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Office/Business :: Financial",
]
dependencies = ["mcp[cli]>=1.3.0"]

[project.urls]
Homepage = "https://haulage.app"
Repository = "https://github.com/CSOAI-ORG/meok-livestock-welfare-transport-mcp"

[project.scripts]
meok-livestock-welfare-transport-mcp = "server:main"

[tool.setuptools]
py-modules = ["server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]


[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]


[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_Configs = true
disallow_untyped_defs = true

